# svg-collector

./: .gitignore  Makefile  main.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
svg_collector/: main.py  view_box.py
